@@ -1,3 +1,10 @@
+2008-04-07  iain  <iain@gnome.org>
+
+	* src/core/compositor.c (add_repair): Turn on idle repainting.
+	(hide_overlay_window): Hide overlay window
+	(meta_compositor_unmanage_screen): Release overlay window.
+	Fixes #526770.
+
 2008-03-09  Thomas Thurman  <tthurman@gnome.org>
 
         * configure.in: Post-branch bump to 2.22.1.
